fixup typo in model
update database schema for optimizing administrator workflow
